# plc_comm

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
res/include/: libplctag.h
src/: plc_comm.c  plc_comm.h
src/examples/: CMakeLists.txt  README.txt  example1.c  example2.c  example3.c  example4.c  example5.c  simple_multiple_tag_async.c  simple_single_tag_async.c  simple_single_tag_config.c  simple_single_tag_sync.c  test.c  utils.h
src/include/: plc_comm.h
src/lib/: CMakeLists.txt  plc_comm.c  utils.c  utils.h
src/lib/include/: plc_comm.h
